# CruiseEngine

./: CMakeLists.txt
Cruise/: CMakeLists.txt
Cruise/src/Core/: Application.cpp  Application.h  Defines.h  EntryPoint.cpp  Game.h  Logger.cpp  Logger.h  assert.h
Cruise/src/Platform/OS/: LinuxPlatform.cpp  Platform.h  Win32Platform.cpp
Game/: CMakeLists.txt
Game/src/: TestGame.cpp  TestGame.h  TestGameEntry.cpp  main.cpp
